# public

./: .gitignore
books/: a.js  a.py  b.py  favorites.md  poker.py  read.html  read.md  toread.md  x  y
dev/bash/: tableload.sh
dev/conf/bash/: .bash_profile
dev/conf/iterm2/: com.googlecode.iterm2.plist
dev/swift/learning/: README.md
dev/swift/learning/SetGame/: Package.swift  README.md
dev/swift/learning/UpAndDownTheRiver/: Package.swift  README.md
dev/tetris-html/: index.html
dev/work/liant/compiler/: ACCESS.DCL  ADDCK.DCL  ADDCK.PL1  ARGLST.PL1  ARGPRM.DCL  ARGPRM.PL1  BASSYM.DCL  BINDUT.DCL  BLDMSG.C  BLDMSG.SH  BUITYP.DCL  CDEF.H  CDOWNV.DCL  CDOWNV.PL1  CERROR.DCL  CERROR.PL1  CGBLDF.PL1  CKFLOW.DCL  CKFLOW.PL1  CLSUTL.DCL  CNVCON.DCL  COMPAT.DCL  COMPAT.IN  COMTYP.DCL  CONSTR.PL1  CONVRT.DCL  CONVRT.PL1  COPYV.DCL  COPYV.PL1  CPATEX.DCL  CPPRUN.DCL  CUPV.DCL  CXOPER.PL1  CXVALU.DCL  CXXFE.PL1  DATSEC.DCL  DATSEC.IN  DCKSTK.PL1  DCLDAT.IN  DCLMSC.DCL  (+127 more)
dev/work/liant/disassembler/: CALFRM.IN  CODADR.PL1  CVTF12.IN  DATADR.IN  DIS.PL1  DISEA.PL1  DOCALL.PL1  DODIS.C  ENTCOD.PL1  GETREG.PL1  GTPARM.IN  HW.H  JMPADR.PL1  MRKTMP.PL1  OPSIZE.IN  PARADR.PL1  PRNTEA.PL1  REG.DCL  REGNAME.IN  SETRVL.PL1  SGETSP.PL1
dev/work/liant/preprocessor/: CPP.BLD  CPP.TXT  PP.PL1  PP_CHAR.IN  PP_DEFS.IN  PP_DMP.DCL  PP_ERR.DCL  PP_ERR.IN  PP_ERR.TXT  PP_EXP.DCL  PP_EXTL.IN  PP_EXTS.IN  PP_IFILE.H  PP_KW.IN  PP_LEX.IN  PP_LFILE.H  PP_LS.PL1  PP_MAC.IN  PP_MAC.PL1  PP_MACT.IN  PP_OP.C  PP_TC.IN  PP_TD.DCL  PP_TD.IN  PP_TM.PL1  PP_TP.IN  PP_TS.DCL  PP_TS.IN  PP_TS.PL1  PP_WRITE.C  UTLDEF.IN  UTLRND.DCL  UTLSTT.DCL  UTLWRT.DCL
dev/work/lincoln/LAYOUT/: BGEOM.C  GED_MAKE.C  MAIN.C  MAIN.H  MAKEFILE  MAP_PARS.C  OUTPUT.C  PLUNK.C  README
dev/work/lincoln/LIBC/: CINDEX.C  FCOPY.C  FDETAB.C  FINDLINE.C  FSEEK_PA.C  FSKIP.C  FTELL_PA.C  ISINT.C  RMCHAR.C  SDELIM.C  SETTAB.C  STRLOWER.C  STRSAVE.C  WORDVEC.C
dev/work/lincoln/MAN/: NOTES.ME
dev/work/lincoln/VALIDLIS/: MAKEFILE  XPRTLIST.C
dev/work/lincoln/WIRELIST/: BGEOM.C  DEVICE.C  MAIN.C  MAKEFILE  README  SIGNAME.C  XNET_PAR.C
dev/xcode/Life/Life/: ContentView.swift  LifeApp.swift  a  b  c  x
dev/xcode/Life/Life.xcodeproj/: project.pbxproj
dev/xcode/Life/LifeTests/: LifeTests.swift
dev/xcode/Life/LifeUITests/: LifeUITests.swift  LifeUITestsLaunchTests.swift
dev/xcode/LifeDev/LifeDev/: ContentView.swift  LifeDevApp.swift
dev/xcode/LifeDev/LifeDev.xcodeproj/: project.pbxproj
dev/xcode/LifeDev/LifeDevTests/: LifeDevTests.swift
dev/xcode/LifeDev/LifeDevUITests/: LifeDevUITests.swift  LifeDevUITestsLaunchTests.swift
dev/xcode/PixelBabel/PixelBabel/: AppSettings.swift  ColorMode.swift  ContentView.swift  ContentView.swift-save  ContentView.swift_  Feedback.swift  PixelBabelApp.swift  PixelBabelApp.swift-save  PixelMap.swift  SettingsView.swift  asdfadf  b  b.swift  ok  p  x  xx  xxx  xxxx
dev/xcode/PixelBabel/PixelBabel.xcodeproj/: project.pbxproj
dev/xcode/PixelBabel/PixelBabelTests/: PixelBabelTests.swift
dev/xcode/PixelBabel/PixelBabelUITests/: PixelBabelUITests.swift  PixelBabelUITestsLaunchTests.swift
dev/xcode/SetGame/: README.md
dev/xcode/SetGame/SetGame/: SetGameApp.swift
dev/xcode/SetGame/SetGame.xcodeproj/: project.pbxproj
dev/xcode/SetGame/SetGame2/: SetGameApp.swift
dev/xcode/SetGame/SetGameTests/: SetGameTests.swift
dev/xcode/SetGame/SetGameUITests/: SetGameUITests.swift
img/home/: IMG_2559.heic  IMG_2560.heic  IMG_2562.heic  IMG_2564.heic  IMG_2565.heic  IMG_2566.heic  IMG_2567.heic  IMG_2569.heic  IMG_2570.heic  IMG_2572.heic
work/: photo_davidmichaels_1.HEIC  resume-new.md  resume.md  resume_davidmichaels.pdf-
work/code/: README.md
work/code/cartera/project_sample/: README.md
work/code/cartera/scripts/: tabledump.sh
work/code/hypr/hypr-pam/: .gitignore  COPYRIGHT  NEWS  configure.ac  makefile-legacy
work/code/hypr/hypr-pam/etc/: clean.sh
work/code/hypr/hypr-pam/etc/keys/: hypr-pam-public-key.pem
work/code/hypr/hypr-pam/etc/misc/: add-static-libs-to-static-lib.sh  copy-json-c-source-into-our-project.sh
work/code/hypr/hypr-pam/etc/packaging/: rpm.spec  sign.sh
work/code/hypr/hypr-pam/etc/repos/: hypr-pam-1.0-1.aarch64.rpm  hypr-pam_1.0-2_arm64.deb
work/code/hypr/hypr-pam/src/auth/: hypr_auth_devices.c  makefile-legacy
work/code/hypr/hypr-pam/src/cli/: hypr.c  hypr_cli_aliases.c
work/code/hypr/hypr-pam/src/pam/: makefile-legacy  pam_hypr.c
work/code/hypr/hypr-pam/src/pam/conf/etc/pam.d/: hypr-example
work/code/hypr/hypr-pam/src/util/: hypr_datetime.c  hypr_http.c  hypr_json.c  hypr_json.h  hypr_str.c  hypr_url.c  hypr_url.h  hypr_uuid.c  makefile-legacy
work/code/hypr/hypr-pam/src/util/json-c/: makefile-legacy
work/code/hypr/hypr-radius-client/: README.md  pom.xml
work/code/liant/compiler/: ARGLST.DCL  BASSYM.PL1  BINDUT.PL1  BUITYP.PL1  CHEAD.DCL  CHKDCL.DCL  CHKDCL.PL1  CLASIZ.DCL  CLASIZ.PL1  CNVFU.C  (+82 more)
work/dev/: README.md
work/dev/hypr/hypr-pam/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  README
work/dev/hypr/hypr-pam/etc/: build.sh  install.sh
work/dev/hypr/hypr-pam/etc/misc/: install-json-c-from-source.sh
work/dev/hypr/hypr-pam/etc/packaging/: KEYID  README  build.sh  clean.sh  prepare.sh
work/dev/hypr/hypr-pam/etc/repos/: hypr-pam-1.1-1.x86_64.rpm  hypr-pam_1.1-2_amd64.deb
work/dev/hypr/hypr-pam/src/auth/: hypr_auth.c  hypr_auth.h  hypr_auth_defaults.h  hypr_auth_devices.h  hypr_pam_config.c  hypr_pam_config.h
work/dev/hypr/hypr-pam/src/cli/: hypr_cli_auth.c  hypr_cli_http.c  hypr_cli_info.c  hypr_cli_pam.c  makefile-legacy
work/dev/hypr/hypr-pam/src/pam/conf/etc/security/: pam_hypr.conf-example
work/dev/hypr/hypr-pam/src/util/: hypr_datetime.h  hypr_http.h  hypr_http_libcurl.c  hypr_str.h  hypr_uuid.h
work/dev/hypr/hypr-pam/src/util/json-c/: README  config.h
work/etc/boston_college_librarian_interview/: README.md
work/private/: resume.md-bak  resume.pdf-20211108
work/private/references/: reference_from_ssawe_davidmichaels
work/summaries/: dig_welcomes.md
work/summaries/dig_welcomes/: README.md
(+1022 files in other folders)
